# techmanualqa

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: settings.yaml  settings.yaml.example
human_validation/: rater_instructions.md
human_validation/audit_sheets/: general_audit_A.xlsx  general_audit_B.xlsx  procedural_audit_A.xlsx  procedural_audit_B.xlsx
prompts/: master_prompt.txt
src/: 01_parse_pdf.py  02_generate_candidates.py  03_prepare_audit_xlsx.py  04_create_input_stats_plot.py  05_create_filtering_table.py  06_create_score_visualizations.py  07_create_results_table.py  08_create_zenodo_archive.py
src/techmanualqa/: analyze_ablation.py  create_filtering_table.py  create_input_stats_plot.py  create_results_table.py  create_score_visualizations.py  create_zenodo_archive.py  generate_candidates.py  llm_client.py  parse_pdf.py  prepare_audit_xlsx.py  qa_benchmark.py  retrieval_benchmark.py
